fix(layout): K-Nav and main content display on smaller screens

--- a/src/Kanbas/Navigation/index.css
+++ b/src/Kanbas/Navigation/index.css
@@ -2,10 +2,9 @@
   background-color: black;
   list-style: none;
   padding: 0px;
-  margin: 0px;
   width: 80px;
   height: 100vh;
-  position: fixed;
+  /* position: fixed; */
 }
 
 .wd-kanbas-navigation li {
